--- a/src/index.css
+++ b/src/index.css
@@ -410,6 +410,28 @@ main {
   opacity: 100%;
 }
 
+.receive-placeholder-container {
+  height: 1.5rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.receive-placeholder {
+  height: 1.5rem;
+  background-color: rgba(0, 0, 0, 0.15);
+}
+
+.receive-placeholder-qr-container {
+  margin-bottom: 0;
+}
+
+.receive-placeholder-qr {
+  width: 215px; /* 13.4375rem */
+  height: 13.75rem;
+  margin: 1.25rem;
+  background-color: rgba(0, 0, 0, 0.15);
+}
+
 :root[data-theme='dark'] hr {
   background-color: var(--bs-gray-800);
   opacity: 100%;
