--- a/src/components/Send.css
+++ b/src/components/Send.css
@@ -125,12 +125,12 @@ input::-webkit-inner-spin-button {
 
 .input-loader {
   height: 3.5rem;
-  background-color: rgba(0, 0, 0, 0.125) !important;
+  background-color: #e9ecef !important;
 }
 
 .text-loader {
   height: 1.75rem;
-  background-color: rgba(0, 0, 0, 0.125) !important;
+  background-color: #e9ecef !important;
 }
 
 .form-group-without-coinjoin-option {
