--- a/src/index.css
+++ b/src/index.css
@@ -399,6 +399,10 @@ main {
   color: var(--bs-gray-900);
 }
 
+.cheatsheet .cheatsheet-list-item.upcoming-feature {
+  opacity: 0.25;
+}
+
 :root[data-theme='dark'] .cheatsheet-link.nav-link {
   color: var(--bs-gray-400);
 }
