--- a/src/index.css
+++ b/src/index.css
@@ -365,7 +365,7 @@ main {
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
   margin: 0px auto;
-  width: 480px;
+  width: 528px;
 }
 
 .cheatsheet .offcanvas-header .btn-close {
@@ -376,7 +376,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 2rem;
+  min-width: 2rem;
   height: 2rem;
   border-radius: 50%;
   background-color: rgb(0, 0, 0);
