--- a/src/index.css
+++ b/src/index.css
@@ -669,6 +669,7 @@ h2 {
 }
 
 :root[data-theme='dark'] .form-control:disabled,
+:root[data-theme='dark'] .form-select:disabled,
 .form-control[readonly] {
   background-color: var(--bs-gray-500);
 }
