--- a/src/components/Send.css
+++ b/src/components/Send.css
@@ -122,3 +122,11 @@ input::-webkit-inner-spin-button {
   background-color: var(--bs-gray-dark);
   border-color: var(--bs-gray-dark) !important;
 }
+
+.send .input-loader {
+  height: 3.5rem;
+}
+
+.form-group-without-coinjoin-option {
+  margin-bottom: 3.25rem;
+}
