chore: add postfix to css classes related to palceholders

--- a/src/components/CurrentWalletMagic.module.css
+++ b/src/components/CurrentWalletMagic.module.css
@@ -1,9 +1,9 @@
-.wallet-header-title {
+.wallet-header-title-placeholder {
   width: 5rem;
   margin-bottom: 0.5rem;
 }
 
-.wallet-header-subtitle {
+.wallet-header-subtitle-placeholder {
   width: 12rem;
   height: 1.8rem;
   margin-bottom: 0.45rem;
