ui: small visual adaptions after placeholder PR (#222)
* chore: harmonize sprite definitions

* fix: prevent render errors on invalid token in CurrentWalletMagic screen

* ui: add border-radius to input placeholder

* fix: add relationship 'noopener' to external links on Send screen

Co-authored-by: Đorđe Spasić <34274884+Djo1e@users.noreply.github.com>

--- a/src/components/Send.css
+++ b/src/components/Send.css
@@ -125,8 +125,5 @@ input::-webkit-inner-spin-button {
 
 .send .input-loader {
   height: 3.5rem;
-}
-
-.form-group-without-coinjoin-option {
-  margin-bottom: 3.25rem;
+  border-radius: 0.25rem;
 }
