--- a/src/components/Send.css
+++ b/src/components/Send.css
@@ -25,9 +25,18 @@ input::-webkit-inner-spin-button {
   padding: 0.2rem 0.5rem;
 }
 
-.send .blurred,
-.send form.blurred ~ .collaborators-selector,
-.send form.blurred ~ button[type='submit'] {
+.send.maker-running form,
+.send.maker-running .collaborators-selector,
+.send.maker-running button[type='submit'] {
+  filter: blur(2px);
+}
+
+/* figma design would like to have the values shown when a taker operation
+   is running - since we do not support this by now, lets blur the
+   forms in the meantime, just like when a maker is running. */
+.send.taker-running form,
+.send.taker-running .collaborators-selector,
+.send.taker-running button[type='submit'] {
   filter: blur(2px);
 }
 
