--- a/src/index.css
+++ b/src/index.css
@@ -486,6 +486,9 @@ h2 {
   background-color: var(--bs-gray-800);
   border-color: var(--bs-gray-900);
 }
+.alert-info a {
+  color: inherit;
+}
 
 .modal-header {
   background-color: var(--bs-gray-800);
@@ -677,6 +680,7 @@ h2 {
 }
 
 :root[data-theme='dark'] .form-control:disabled,
+:root[data-theme='dark'] .form-select:disabled,
 .form-control[readonly] {
   background-color: var(--bs-gray-500);
 }
