--- a/src/components/DisplayAccountsOverlay.module.css
+++ b/src/components/DisplayAccountsOverlay.module.css
@@ -19,3 +19,19 @@
   background-color: var(--bs-gray-800);
   color: var(--bs-white);
 }
+
+.accounts-overlay .offcanvas-body {
+  padding: 0;
+}
+
+.offcanvas-body .accordion-item {
+  border: none;
+}
+
+.accordion-item .accordion-body {
+  padding: 0 !important;
+}
+
+.accordion-item button {
+  box-shadow: none !important;
+}
