--- a/src/index.css
+++ b/src/index.css
@@ -357,59 +357,14 @@ main {
   }
 }
 
-/* Cheatsheet Styles */
-.cheatsheet {
-  height: auto;
-  /* page height - navbar height - some spacing*/
-  max-height: calc(100vh - 76px - 1rem);
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  margin: 0px auto;
-  width: 528px;
-}
-
-.cheatsheet .offcanvas-header .btn-close {
-  margin-bottom: auto;
-}
-
-.cheatsheet .cheatsheet-list-item {
-  align-items: start;
-}
-
-.cheatsheet .cheatsheet-list-item.upcoming-feature {
-  opacity: 0.25;
-}
-
-.cheatsheet .cheatsheet-list-item h6 {
-  margin-bottom: 0.1rem;
-}
-.cheatsheet a {
-  color: inherit;
-}
-
-.cheatsheet .numbered {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  background-color: rgb(0, 0, 0);
-  color: white;
-}
-
-:root[data-theme='dark'] .cheatsheet .numbered {
-  color: rgb(0, 0, 0);
-  background-color: white;
-}
-
-.cheatsheet-link.nav-link {
+footer .cheatsheet-link.nav-link {
   color: var(--bs-gray-900);
 }
 
-:root[data-theme='dark'] .cheatsheet-link.nav-link {
+:root[data-theme='dark'] footer .cheatsheet-link.nav-link {
   color: var(--bs-gray-400);
 }
+
 /* Blurred Text Styles */
 
 .blurred-text {
