review: replace toggle with 'advanced' form dropdown in Earn screen

--- a/src/components/Earn.module.css
+++ b/src/components/Earn.module.css
@@ -3,14 +3,6 @@
   border-radius: 0.25rem;
 }
 
-.earn .input-group-text {
-  width: 5ch;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.2rem;
-}
-
 .earn form input:not([type='checkbox']) {
   height: 3.5rem;
 }
@@ -18,4 +10,32 @@
 .earn form button {
   height: 3rem;
   width: 100%;
+}
+
+.settings-container {
+  margin-top: 1.5rem;
+}
+
+.settings-container button.settings-btn {
+  background-color: transparent !important;
+  border: none;
+  padding-left: 0;
+}
+
+.settings-container .input-group-text {
+  width: 5ch;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+}
+
+.earn hr {
+  background-color: rgba(222, 222, 222, 1);
+  opacity: 100%;
+}
+
+:root[data-theme='dark'] .earn hr {
+  background-color: var(--bs-gray-800);
+  opacity: 100%;
 }
