--- a/src/components/Settings.module.css
+++ b/src/components/Settings.module.css
@@ -14,9 +14,16 @@
 }
 
 .settings-group-container {
-  margin: -0.75rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   margin-bottom: 0.25rem;
+}
+
+.settings-links {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 0.25rem;
+  padding: 0.375rem 0.75rem;
 }
