ui: Earn screen figma alignment (#304)
* ui: show config options on Earn screen only in advanced mode

* refactor: externalize AdvancedModeToggleButton component to own file

* refactor: ToggleSwitch from jsx to tsx

* refactor: pass api result down the promise chain on Earn page

* ui: center offertype toggle switch on Earn page

* ui: ability to add an 'off' label and subtitle to ToggleSwitch

* ui: add label to off state of offertype toggle switch on Earn page

* ui: add individual 'simple/advanced view' toggle to Earn screen

* ui: add prefix to inputs on Earn page

* fix: do not populate fee rel with zero when no input is given

* refactor: move styles for Earn page from global to module file

* Revert "ui: ability to add an 'off' label and subtitle to ToggleSwitch"

This reverts commit 04edc2914e1365d6333afdd237dd898f9fe96876.

* Revert "ui: add label to off state of offertype toggle switch on Earn page"

This reverts commit 3142131e47c20e2cf7bb09032275f6e92e669252.

* Revert "ui: add individual 'simple/advanced view' toggle to Earn screen"

This reverts commit 0f850f3e2869b40eebe45d1462eb6e2b6d3dcffe.

* Revert "refactor: externalize AdvancedModeToggleButton component to own file"

This reverts commit 6bf5445265202c53d4c1b74177a543276a9fa8b9.

* dev: move styles for Receive screen to module

* review: replace toggle with 'advanced' form dropdown in Earn screen

* review: add RadioTabs component

* review: use RadioTabs for offertype on Earn screen

* fix: title in RadioTab

* feedback: style updates

* feedback: rename control element

Co-authored-by: Daniel <10026790+dnlggr@users.noreply.github.com>

--- a/src/components/Earn.module.css
+++ b/src/components/Earn.module.css
@@ -1,4 +1,42 @@
-.input-loader {
+.earn .input-loader {
   height: 3.5rem;
   border-radius: 0.25rem;
+}
+
+.earn form input:not([type='checkbox']) {
+  height: 3.5rem;
+}
+
+.earn form button {
+  height: 3rem;
+  width: 100%;
+}
+
+.settings-container {
+  margin-top: 1.5rem;
+}
+
+.settings-container button.settings-btn {
+  background-color: transparent !important;
+  border: none;
+  padding-left: 0;
+  font-weight: 500;
+}
+
+.settings-container .input-group-text {
+  width: 5ch;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+}
+
+.earn hr {
+  background-color: rgba(222, 222, 222, 1);
+  opacity: 100%;
+}
+
+:root[data-theme='dark'] .earn hr {
+  background-color: var(--bs-gray-800);
+  opacity: 100%;
 }
