--- a/src/components/DisplayAccountsOverlay.module.css
+++ b/src/components/DisplayAccountsOverlay.module.css
@@ -5,7 +5,13 @@
 }
 
 .accounts-overlay-header {
-  background-color: var(--bs-gray-200);
+  background-color: var(--bs-gray-100);
+  border-bottom: 1px solid var(--bs-gray-300);
+  margin-bottom: 2rem;
+}
+
+.accounts-overlay-header button:hover {
+  color: inherit;
 }
 
 .accounts-overlay-header-title {
@@ -16,8 +22,9 @@
 }
 
 :root[data-theme='dark'] .accounts-overlay-header {
-  background-color: var(--bs-gray-800);
   color: var(--bs-white);
+  border-color: var(--bs-gray-800) !important;
+  background-color: var(--bs-gray-700);
 }
 
 .accounts-overlay .offcanvas-body {
