--- a/src/index.css
+++ b/src/index.css
@@ -297,13 +297,13 @@ main {
   position: relative;
 }
 
-@media only screen and (min-width: 768px) {
-  .flex-1 {
-    flex-grow: 1;
-    flex-shrink: 0;
-    flex-basis: 0 !important;
-  }
+.flex-1 {
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 0 !important;
+}
 
+@media only screen and (min-width: 768px) {
   .center-nav-link {
     min-width: 80px;
     padding: 8px 0 !important;
@@ -610,6 +610,23 @@ h2 {
 
 .btn:disabled:hover {
   cursor: not-allowed;
+}
+
+/* Account Overlay */
+
+.accordion-header .accordion-button:not(.collapsed) {
+  /* Disable coloring for expanded headers */
+  color: var(--bs-black);
+  background-color: transparent;
+}
+
+.accordion-header .accordion-button:not(.collapsed)::after {
+  /* Disable coloring for expanded headers */
+  background-image: url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23212529%27%3e%3cpath fill-rule=%27evenodd%27 d=%27M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z%27/%3e%3c/svg%3e');
+}
+
+:root[data-theme='dark'] .accordion-header .accordion-button:not(.collapsed)::after {
+  background-image: url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23fff%27%3e%3cpath fill-rule=%27evenodd%27 d=%27M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z%27/%3e%3c/svg%3e');
 }
 
 /* Theme overrides */
