--- a/src/components/FidelityBond.module.css
+++ b/src/components/FidelityBond.module.css
@@ -2,3 +2,24 @@
 .fidelity-bond input[type='number'] {
   -moz-appearance: unset !important;
 }
+
+.percentage-bar {
+  position: absolute;
+  height: 100%;
+  background-color: rgba(22, 22, 22, 0.1);
+  /* 
+    unfortunately, setting the width via data prop does not work:`width: attr(data-percentage)`.
+    please set the width manually via style property.
+  */
+}
+
+:root[data-theme='dark'] .percentage-bar {
+  background-color: rgba(222, 222, 222, 0.1);
+}
+
+.percentage-bar.highlight {
+  background-color: rgba(39, 174, 96, 0.2);
+}
+:root[data-theme='dark'] .percentage-bar.highlight {
+  background-color: rgba(39, 174, 96, 0.1);
+}
