--- a/src/components/CurrentWalletMagic.module.css
+++ b/src/components/CurrentWalletMagic.module.css
@@ -8,3 +8,37 @@
   height: 1.8rem;
   margin-bottom: 0.45rem;
 }
+
+.jars-placeholder {
+  width: 100%;
+  height: 3.5rem;
+}
+
+.jars-divider-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.jars-divider-line {
+  margin: 0;
+  width: 50%;
+  flex-grow: 0;
+  flex-shrink: 1;
+}
+
+.jars-divider-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 1rem;
+  flex-shrink: 0;
+  flex-grow: 1;
+  color: var(--bs-body-color);
+  cursor: pointer;
+  background-color: transparent;
+  border: 1px solid var(--bs-body-color);
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+}
