--- a/src/components/CurrentWalletMagic.module.css
+++ b/src/components/CurrentWalletMagic.module.css
@@ -42,3 +42,9 @@
   width: 2rem;
   height: 2rem;
 }
+
+:global .btn.btn-outline-dark {
+  padding: 0.25rem;
+  font-weight: 500;
+  border-color: rgba(222, 222, 222, 1);
+}
