--- a/src/components/JarSelectorModal.module.css
+++ b/src/components/JarSelectorModal.module.css
@@ -12,37 +12,34 @@
   box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.25) !important;
 }
 
-.modal-header {
+.modalHeader {
   display: flex !important;
   justify-content: flex-start !important;
   background-color: transparent !important;
   padding: 1.25rem !important;
 }
 
-.modal-title {
+.modalTitle {
   width: 100%;
   font-size: 1rem !important;
   font-weight: 400 !important;
   color: var(--bs-body-color) !important;
 }
 
-.modal-title > div:first-child {
+.modalTitle > div:first-child {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.modal-title .cancel-button {
+.modalTitle .cancelButton {
   padding: 0 0 0 1rem;
   color: var(--bs-body-color);
   background-color: transparent !important;
   border: none;
 }
 
-.modal-body {
-}
-
-.modal-footer {
+.modalFooter {
   display: flex !important;
   justify-content: center !important;
   gap: 1rem;
@@ -50,14 +47,14 @@
   padding: 1rem 1.25rem 1.25rem 1.25rem !important;
 }
 
-.modal-footer :global .btn {
+.modalFooter :global .btn {
   flex-grow: 1;
   min-height: 2.8rem;
   font-weight: 500;
   border-color: none !important;
 }
 
-.jars-container {
+.jarsContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -66,51 +63,9 @@
   color: var(--bs-body-color);
 }
 
-.jar-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  cursor: pointer;
-}
-
-.jar-container.not-selectable {
-  color: var(--bs-gray-600);
-}
-
-.jar-sprite {
-  margin: 0 0 0.25rem 0;
-}
-
-.jar-index {
-  font-size: 0.8rem;
-  color: var(--bs-gray-600);
-}
-
-.jar-balance {
-  font-size: 0.8rem;
-  padding-bottom: 0.8rem;
-}
-
 @media only screen and (min-width: 768px) {
-  .jars-container {
+  .jarsContainer {
     flex-direction: row;
     gap: 1.5rem;
   }
-}
-
-.selection-circle {
-  height: 1.25rem;
-  width: 1.25rem;
-  border-radius: 50%;
-  display: inline-block;
-  border: 1px solid var(--bs-body-color);
-}
-
-.selection-circle-filled {
-  background-color: var(--bs-body-color);
-}
-
-.selection-circle-placeholder {
-  height: 1.25rem;
-  width: 1.25rem;
 }
