--- a/src/components/Send.module.css
+++ b/src/components/Send.module.css
@@ -3,6 +3,10 @@
   width: 100%;
 }
 
+.jar-input {
+  padding-right: 5rem;
+}
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -22,6 +26,19 @@ input[type='number'] {
   transform: translate(0%, -50%);
   padding: 0.2rem 0.5rem !important;
   border: none !important;
+}
+
+.button-jar-selector .selected-jar-container {
+  position: relative;
+}
+
+.button-jar-selector .selected-jar-index {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 0.8rem;
+  font-weight: 300;
 }
 
 .button-sweep {
