--- a/src/components/CurrentWalletMagic.module.css
+++ b/src/components/CurrentWalletMagic.module.css
@@ -43,7 +43,7 @@
   height: 2rem;
 }
 
-:global .btn.btn-outline-dark {
+.send-receive-button {
   padding: 0.25rem;
   font-weight: 500;
   border-color: rgba(222, 222, 222, 1);
