--- a/src/components/CurrentWalletMagic.module.css
+++ b/src/components/CurrentWalletMagic.module.css
@@ -43,8 +43,8 @@
   height: 2rem;
 }
 
-:global .btn.btn-outline-dark {
+.send-receive-button {
   padding: 0.25rem;
   font-weight: 500;
-  border-color: rgba(222, 222, 222, 1);
+  border-color: rgba(222, 222, 222, 1) !important;
 }
