--- a/src/components/Receive.module.css
+++ b/src/components/Receive.module.css
@@ -71,9 +71,23 @@
   padding: 1rem 0 1rem;
 }
 
+.jarsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  color: var(--bs-body-color);
+  margin-bottom: 2rem;
+}
+
 @media only screen and (min-width: 768px) {
   .address {
     font-size: var(--bs-body-font-size);
     padding: 0;
+  }
+  .jarsContainer {
+    gap: 1.5rem;
   }
 }
