--- a/src/components/Receive.module.css
+++ b/src/components/Receive.module.css
@@ -82,6 +82,12 @@
   margin-bottom: 2rem;
 }
 
+.jarsPlaceholder {
+  width: 100%;
+  height: 7.75rem;
+  margin-bottom: 2rem;
+}
+
 @media only screen and (min-width: 768px) {
   .address {
     font-size: var(--bs-body-font-size);
