--- a/src/components/Receive.module.css
+++ b/src/components/Receive.module.css
@@ -94,6 +94,8 @@
     padding: 0;
   }
   .jarsContainer {
-    gap: 1.5rem;
+   gap: 1.5rem;
+   flex-wrap: nowrap;
+   justify-content: space-between;
   }
 }
