--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -41,5 +41,5 @@
   flex-grow: 1;
   min-height: 2.8rem;
   font-weight: 500;
-  border-color: rgba(222, 222, 222, 1);
+  border-color: none !important;
 }
