feat: move fidelity bonds to earn screen

--- a/src/components/Earn.module.css
+++ b/src/components/Earn.module.css
@@ -3,6 +3,11 @@
   border-radius: 0.25rem;
 }
 
+.earn .fb-loader {
+  height: 11rem;
+  border-radius: 0.25rem;
+}
+
 .earn form input:not([type='checkbox']) {
   height: 3.5rem;
 }
