Revert "ui: remove border of buttons in footer of ConfirmModal"
This reverts commit 8ddd95eaf2edc807293cf5aaf335b140905a6b85.

--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -41,5 +41,5 @@
   flex-grow: 1;
   min-height: 2.8rem;
   font-weight: 500;
-  border-color: none !important;
+  border-color: rgba(222, 222, 222, 1);
 }
